--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <main>
         <section id="login">
             <div id="imagem">
-                Foto
+                <img src="" alt="">
             </div>
             <div id="formulario">
                 <h1>Login</h1>
-                <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.
+                <p>Seja bem-vindo(a) novamente.  
+                Faça login para acessar sua conta e poder
+                 fazer as configurações no seu ambiente.
                 <form action="login.php" method="post">
 
                 </form> </p>
